--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>POEMA DEL TERREMOTO por Gregorio Fontén</title>
+<title>POEMA DEL TERREMOTO por Gregorio FontÃ©n</title>
 <style type="text/css">
 <!--
 body {
@@ -42,13 +42,13 @@ margin-left:450px;
 <body>
 <div id="canvas">
 <center><br><br><br>
-<a href="https://chupilcon.github.io/terremoto2010/1.html"><h1>Poema del Terremoto<br><font size="-1">(enter)</font></h1></a>
-<p class="right"><b>por Gregorio Fontén</b></p>
+<a href="/1.html"><h1>Poema del Terremoto<br><font size="-1">(enter)</font></h1></a>
+<p class="right"><b>por Gregorio FontÃ©n</b></p>
 <br><br><p>las frases utilizadas en este poema corresponden a
-declaraciones de personas después del terremoto.<br>
-El poema está hecho con código html.<br>
+declaraciones de personas despuÃ©s del terremoto.<br>
+El poema estÃ¡ hecho con cÃ³digo html.<br>
 (Navegue el poema haciendo click en distintos lugares)<br>
-Son diez páginas en total y advierto que la navegación puede ser difícil.
+Son diez pÃ¡ginas en total y advierto que la navegaciÃ³n puede ser difÃ­cil.
 </p>
 <br><br><br><br><p>
 the phrases in this poem are statements from people after the earthquake.<br>
