--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ margin-left:450px;
 <body>
 <div id="canvas">
 <center><br><br><br>
-<a href="https://github.com/Chupilcon/poematerremoto/blob/master/1.html"><h1>Poema del Terremoto<br><font size="-1">(enter)</font></h1></a>
+<a href="poematerremoto/1.html"><h1>Poema del Terremoto<br><font size="-1">(enter)</font></h1></a>
 <p class="right"><b>por Gregorio Fontén</b></p>
 <br><br><p>las frases utilizadas en este poema corresponden a
 declaraciones de personas después del terremoto.<br>
