--- a/1.html
+++ b/1.html
@@ -1,6 +1,6 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>POEMA DEL TERREMOTO por Gregorio Fontén</title>
+<title>POEMA DEL TERREMOTO por Gregorio FontÃ©n</title>
 <style type="text/css">
 <!--
 body {
@@ -47,29 +47,20 @@ COLOR:  transparent;
 </style>
 </head>
 <body>
-<div id="canvas"><a class="link" href="https://chupilcon.github.io/terremoto2010/2.html">
-<img src="https://chupilcon.github.io/terremoto2010/t1.gif" alt="T1"></a>
-<img src="https://chupilcon.github.io/terremoto2010/t2.gif" alt="T2">
-<img src="https://chupilcon.github.io/terremoto2010/r3.gif" alt="r3">
-<a class="link" href="https://chupilcon.github.io/terremoto2010/2.html">
-<img src="https://chupilcon.github.io/terremoto2010/r1.gif" alt="r2"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/3.html">
-<img src="https://chupilcon.github.io/terremoto2010/r1.gif" alt="r1"></a>
-<img id="1" src="https://chupilcon.github.io/terremoto2010/m1.gif" alt="m1">
+<div id="canvas"><a class="link" href="https://chupilcon.github.io/poematerremoto/2.html">
+<img src="https://chupilcon.github.io/poematerremoto/t1.gif" alt="T1"></a>
+<img src="https://chupilcon.github.io/poematerremoto/t2.gif" alt="T2">
+<img src="https://chupilcon.github.io/poematerremoto/r3.gif" alt="r3">
+<a class="link" href="https://chupilcon.github.io/poematerremoto/2.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r2"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r1"></a>
+<img id="1" src="https://chupilcon.github.io/poematerremoto/m1.gif" alt="m1">
 <marquee width="50%" scrollamount="20" direction="right" behavior="alternate">
-<img src="https://chupilcon.github.io/terremoto2010/o.gif" alt="o"></marquee>
+<img src="https://chupilcon.github.io/poematerremoto/o.gif" alt="o"></marquee>
 <marquee width="100%" scrollamount="150" direction="up" behavior="alternate">
-<img src="https://chupilcon.github.io/terremoto2010/e.gif" alt="e"></marquee>
+<img src="https://chupilcon.github.io/poematerremoto/e.gif" alt="e"></marquee>
 </div>
 </div>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-8176650-7");
-pageTracker._trackPageview();
-} catch(err) {}</script>
 </body>
 </html>
