--- a/2.html
+++ b/2.html
@@ -1,6 +1,6 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>POEMA DEL TERREMOTO por Gregorio Fontén</title>
+<title>POEMA DEL TERREMOTO por Gregorio FontÃ©n</title>
 <style type="text/css">
 <!--
 body {
@@ -51,28 +51,28 @@ COLOR:  transparent;
 <body>
 <div id="canvas">
 <marquee width="100%" scrollamount="15" direction="left" behavior="alternate">
-<img src="https://chupilcon.github.io/terremoto2010/terremoto/e.gif" alt="e"></marquee>
+<img src="https://chupilcon.github.io/poematerremoto/e.gif" alt="e"></marquee>
 <marquee height="50%" scrollamount="20" direction="up" behavior="alternate">
-<a class="link" href="https://chupilcon.github.io/terremoto2010/terremoto/3.html">
-<img src="https://chupilcon.github.io/terremoto2010/t1.gif" alt="T1"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/3.html">
-<img src="hhttps://chupilcon.github.io/terremoto2010/r3.gif" alt="r3"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/3.html">
-<img src="https://chupilcon.github.io/terremoto2010/r1.gif" alt="r2"></a>
-<img src="https://chupilcon.github.io/terremoto2010/r1.gif" alt="r1">
-<img id="1" src="https://chupilcon.github.io/terremoto2010/m1.gif" alt="m1"></marquee>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
+<img src="https://chupilcon.github.io/poematerremoto/t1.gif" alt="T1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
+<img src="hhttps://chupilcon.github.io/poematerremoto/r3.gif" alt="r3"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r2"></a>
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r1">
+<img id="1" src="https://chupilcon.github.io/poematerremoto/m1.gif" alt="m1"></marquee>
 <marquee width="50%" scrollamount="20" direction="right" behavior="alternate">
-<img src="https://chupilcon.github.io/terremoto2010/o.gif" alt="o"></marquee>
+<img src="https://chupilcon.github.io/poematerremoto/o.gif" alt="o"></marquee>
 <marquee width="100%" scrollamount="5" direction="right" behavior="alternate">
-<a class="link" href="https://chupilcon.github.io/terremoto2010/4.html">
-<img src="https://chupilcon.github.io/terremoto2010/t2.gif" alt="T2"></a></marquee>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/4.html">
+<img src="https://chupilcon.github.io/poematerremoto/t2.gif" alt="T2"></a></marquee>
 <marquee height="50%" scrollamount="20" direction="left" behavior="alternate">
-<img src="https://chupilcon.github.io/terremoto2010/t1.gif" alt="T1">
-<img src="https://chupilcon.github.io/terremoto2010/r3.gif" alt="r3">
-<img src="https://chupilcon.github.io/terremoto2010/r1.gif" alt="r2">
-<a class="link" href="https://chupilcon.github.io/terremoto2010/1.html">
-<img src="https://chupilcon.github.io/terremoto2010/r1.gif" alt="r1"></a>
-<img id="1" src="https://chupilcon.github.io/terremoto2010/m1.gif" alt="m1"></marquee>
+<img src="https://chupilcon.github.io/poematerremoto/t1.gif" alt="T1">
+<img src="https://chupilcon.github.io/poematerremoto/r3.gif" alt="r3">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r2">
+<a class="link" href="https://chupilcon.github.io/poematerremoto/1.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r1"></a>
+<img id="1" src="https://chupilcon.github.io/poematerremoto/m1.gif" alt="m1"></marquee>
 </div>
 </body>
 </html>
