--- a/3.html
+++ b/3.html
@@ -1,6 +1,6 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>POEMA DEL TERREMOTO por Gregorio Fontén</title>
+<title>POEMA DEL TERREMOTO por Gregorio FontÃ©n</title>
 <style type="text/css">
 <!--
 body {
@@ -60,64 +60,64 @@ COLOR:  transparent;
 <div id="canvas">
 <div id="overlap">
 <marquee width="100%" scrollamount="15" direction="left" behavior="alternate">
-<a class="link" href="https://chupilcon.github.io/terremoto2010/1.html">
-<img src="https://chupilcon.github.io/terremoto2010/e.gif" alt="e"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/2.html">
-<img src="https://chupilcon.github.io/terremoto2010/t1.gif" alt="T1"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/4.html">
-<img src="https://chupilcon.github.io/terremoto2010/r3.gif" alt="r3"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/5.html">
-<img src="https://chupilcon.github.io/terremoto2010/r1.gif" alt="r2"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/5.html">
-<img src="https://chupilcon.github.io/terremoto2010/r1.gif" alt="r1"></a>
-<img id="1" src="https://chupilcon.github.io/terremoto2010/m1.gif" alt="m1"></marquee>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/1.html">
+<img src="https://chupilcon.github.io/poematerremoto/e.gif" alt="e"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/2.html">
+<img src="https://chupilcon.github.io/poematerremoto/t1.gif" alt="T1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/4.html">
+<img src="https://chupilcon.github.io/poematerremoto/r3.gif" alt="r3"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r2"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r1"></a>
+<img id="1" src="https://chupilcon.github.io/poematerremoto/m1.gif" alt="m1"></marquee>
 <marquee width="50%" scrollamount="20" direction="right" behavior="alternate">
-<a class="link" href="https://chupilcon.github.io/terremoto2010/2.html">
-<img src="https://chupilcon.github.io/terremoto2010/o.gif" alt="o"></a></marquee>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/2.html">
+<img src="https://chupilcon.github.io/poematerremoto/o.gif" alt="o"></a></marquee>
 <marquee width="100%" scrollamount="5" direction="right" behavior="alternate">
-<a class="link" href="https://chupilcon.github.io/terremoto2010/4.html">
-<img src="https://chupilcon.github.io/terremoto2010/t2.gif" alt="T2"></a></marquee>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/4.html">
+<img src="https://chupilcon.github.io/poematerremoto/t2.gif" alt="T2"></a></marquee>
 <marquee height="50%" scrollamount="20" direction="left" behavior="alternate">
-<a class="link" href="https://chupilcon.github.io/terremoto2010/5.html">
-<img src="https://chupilcon.github.io/terremoto2010/t1.gif" alt="T1"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/4.html">
-<img src="https://chupilcon.github.io/terremoto2010/r3.gif" alt="r3"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/2.html">
-<img src="https://chupilcon.github.io/terremoto2010/r1.gif" alt="r2"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/1.html">
-<img src="https://chupilcon.github.io/terremoto2010/r1.gif" alt="r1"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/5.html">
-<img id="1" src="https://chupilcon.github.io/terremoto2010/m1.gif" alt="m1"></a></marquee>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img src="https://chupilcon.github.io/poematerremoto/t1.gif" alt="T1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/4.html">
+<img src="https://chupilcon.github.io/poematerremoto/r3.gif" alt="r3"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/2.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r2"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/1.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img id="1" src="https://chupilcon.github.io/poematerremoto/m1.gif" alt="m1"></a></marquee>
 <marquee width="100%" scrollamount="15" direction="left" behavior="alternate">
-<a class="link" href="https://chupilcon.github.io/terremoto2010/4.html">
-<img src="https://chupilcon.github.io/terremoto2010/e.gif" alt="e"></a></marquee>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/4.html">
+<img src="https://chupilcon.github.io/poematerremoto/e.gif" alt="e"></a></marquee>
 <marquee height="50%" scrollamount="20" direction="up" behavior="alternate">
-<a class="link" href="https://chupilcon.github.io/terremoto2010/2.html">
-<img src="https://chupilcon.github.io/terremoto2010/t1.gif" alt="T1"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/4.html">
-<img src="https://chupilcon.github.io/terremoto2010/r3.gif" alt="r3"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/4.html">
-<img src="https://chupilcon.github.io/terremoto2010/r1.gif" alt="r2"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/5.html">
-<img src="https://chupilcon.github.io/terremoto2010/r1.gif" alt="r1"></a>
-<img id="1" src="https://chupilcon.github.io/terremoto2010/m1.gif" alt="m1"></marquee></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/2.html">
+<img src="https://chupilcon.github.io/poematerremoto/t1.gif" alt="T1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/4.html">
+<img src="https://chupilcon.github.io/poematerremoto/r3.gif" alt="r3"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/4.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r2"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r1"></a>
+<img id="1" src="https://chupilcon.github.io/poematerremoto/m1.gif" alt="m1"></marquee></a>
 <marquee width="50%" scrollamount="20" direction="right" behavior="alternate">
-<a class="link" href="https://chupilcon.github.io/terremoto2010/4.html">
-<img src="https://chupilcon.github.io/terremoto2010/o.gif" alt="o"></a></marquee>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/4.html">
+<img src="https://chupilcon.github.io/poematerremoto/o.gif" alt="o"></a></marquee>
 <marquee width="100%" scrollamount="5" direction="right" behavior="alternate">
-<a class="link" href="https://chupilcon.github.io/terremoto2010/5.html">
-<img src="https://chupilcon.github.io/terremoto2010/t2.gif" alt="T2"></a></marquee>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img src="https://chupilcon.github.io/poematerremoto/t2.gif" alt="T2"></a></marquee>
 <marquee height="50%" scrollamount="20" direction="left" behavior="alternate">
-<a class="link" href="https://chupilcon.github.io/terremoto2010/4.html">
-<img src="https://chupilcon.github.io/terremoto2010/t1.gif" alt="T1"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/5.html">
-<img src="https://chupilcon.github.io/terremoto2010/r3.gif" alt="r3"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/2.html">
-<img src="https://chupilcon.github.io/terremoto2010/r1.gif" alt="r2"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/1.html">
-<img src="https://chupilcon.github.io/terremoto2010/r1.gif" alt="r1"></a>
-<a class="link" href="https://chupilcon.github.io/terremoto2010/4.html">
-<img id="1" src="https://chupilcon.github.io/terremoto2010/m1.gif" alt="m1"></a></marquee>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/4.html">
+<img src="https://chupilcon.github.io/poematerremoto/t1.gif" alt="T1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img src="https://chupilcon.github.io/poematerremoto/r3.gif" alt="r3"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/2.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r2"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/1.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/4.html">
+<img id="1" src="https://chupilcon.github.io/poematerremoto/m1.gif" alt="m1"></a></marquee>
 </div>
 </div>
 </body>
