--- a/4.html
+++ b/4.html
@@ -1,6 +1,6 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>POEMA DEL TERREMOTO por Gregorio Fontén</title>
+<title>POEMA DEL TERREMOTO por Gregorio FontÃ©n</title>
 <style type="text/css">
 <!--
 body {
@@ -58,80 +58,61 @@ COLOR:  transparent;
 <div id="canvas">
 <div id="overlap">
 <marquee width="100%" scrollamount="15" direction="up" behavior="alternate">
-<a class="link" href="http://www.gregoriofonten.com/terremoto/3.html">
-<img src="http://www.gregoriofonten.com/terremoto/e.gif" alt="e"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/6.html">
-<img src="http://www.gregoriofonten.com/terremoto/t1.gif" alt="T1"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/3.html">
-<img src="http://www.gregoriofonten.com/terremoto/r3.gif" alt="r3"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/5.html">
-<img src="http://www.gregoriofonten.com/terremoto/r1.gif" alt="r2"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/6.html">
-<img src="http://www.gregoriofonten.com/terremoto/r1.gif" alt="r1"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/5.html">
-<img src="http://www.gregoriofonten.com/terremoto/m1.gif" alt="m1"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/3.html">
-<img src="http://www.gregoriofonten.com/terremoto/o.gif" alt="o"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/3.html">
-<img src="http://www.gregoriofonten.com/terremoto/t2.gif" alt="T2"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/5.html">
-<img src="http://www.gregoriofonten.com/terremoto/t1.gif" alt="T1"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/6.html">
-<img src="http://www.gregoriofonten.com/terremoto/r3.gif" alt="r3"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/3.html">
-<img src="http://www.gregoriofonten.com/terremoto/r1.gif" alt="r2"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/5.html">
-<img src="http://www.gregoriofonten.com/terremoto/r1.gif" alt="r1"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/6.html">
-<img src="http://www.gregoriofonten.com/terremoto/m1.gif" alt="m1"></a>
-<img src="http://www.gregoriofonten.com/terremoto/e.gif" alt="e"></marquee></a></div>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
+<img src="https://chupilcon.github.io/poematerremoto/e.gif" alt="e"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/6.html">
+<img src="https://chupilcon.github.io/poematerremoto/t1.gif" alt="T1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
+<img src="https://chupilcon.github.io/poematerremoto/r3.gif" alt="r3"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r2"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/6.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img src="https://chupilcon.github.io/poematerremoto/m1.gif" alt="m1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
+<img src="https://chupilcon.github.io/poematerremoto/o.gif" alt="o"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
+<img src="https://chupilcon.github.io/poematerremoto/t2.gif" alt="T2"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img src="https://chupilcon.github.io/poematerremoto/t1.gif" alt="T1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/6.html">
+<img src="https://chupilcon.github.io/poematerremoto/r3.gif" alt="r3"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r2"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/6.html">
+<img src="https://chupilcon.github.io/poematerremoto/m1.gif" alt="m1"></a>
+<img src="https://chupilcon.github.io/poematerremoto/e.gif" alt="e"></marquee></a></div>
 <marquee height="50%" scrollamount="20" direction="up" behavior="alternate">
-<a class="link" href="http://www.gregoriofonten.com/terremoto/5.html">
-<img src="http://www.gregoriofonten.com/terremoto/t1.gif" alt="T1"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/3.html">
-<img src="http://www.gregoriofonten.com/terremoto/r3.gif" alt="r3"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/5.html">
-<img src="http://www.gregoriofonten.com/terremoto/r1.gif" alt="r2"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/3.html">
-<img src="http://www.gregoriofonten.com/terremoto/r1.gif" alt="r1"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/6.html">
-<img id="1" src="http://www.gregoriofonten.com/terremoto/m1.gif" alt="m1"></a></marquee>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img src="https://chupilcon.github.io/poematerremoto/t1.gif" alt="T1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
+<img src="https://chupilcon.github.io/poematerremoto/r3.gif" alt="r3"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r2"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/6.html">
+<img id="1" src="https://chupilcon.github.io/poematerremoto/m1.gif" alt="m1"></a></marquee>
 <marquee width="50%" scrollamount="20" direction="right" behavior="alternate">
-<a class="link" href="http://www.gregoriofonten.com/terremoto/3.html">
-<img src="http://www.gregoriofonten.com/terremoto/o.gif" alt="o"></a></marquee>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
+<img src="https://chupilcon.github.io/poematerremoto/o.gif" alt="o"></a></marquee>
 <marquee width="100%" scrollamount="5" direction="right" behavior="alternate">
-<a class="link" href="http://www.gregoriofonten.com/terremoto/3.html">
-<img src="http://www.gregoriofonten.com/terremoto/t2.gif" alt="T2"></a></marquee>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
+<img src="https://chupilcon.github.io/poematerremoto/t2.gif" alt="T2"></a></marquee>
 <marquee height="50%" scrollamount="20" direction="left" behavior="alternate">
-<a class="link" href="http://www.gregoriofonten.com/terremoto/5.html">
-<img src="http://www.gregoriofonten.com/terremoto/t1.gif" alt="T1"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/6.html">
-<img src="http://www.gregoriofonten.com/terremoto/r3.gif" alt="r3"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/5.html">
-<img src="http://www.gregoriofonten.com/terremoto/r1.gif" alt="r2"></a>
-<a class="link" href="hhttp://www.gregoriofonten.com/terremoto/6.html">
-<img src="http://www.gregoriofonten.com/terremoto/r1.gif" alt="r1"></a>
-<a class="link" href="http://www.gregoriofonten.com/terremoto/5.html">
-<img id="1" src="http://www.gregoriofonten.com/terremoto/m1.gif" alt="m1"></a></marquee>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img src="https://chupilcon.github.io/poematerremoto/t1.gif" alt="T1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/6.html">
+<img src="https://chupilcon.github.io/poematerremoto/r3.gif" alt="r3"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r2"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/6.html">
+<img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r1"></a>
+<a class="link" href="https://chupilcon.github.io/poematerremoto/5.html">
+<img id="1" src="https://chupilcon.github.io/poematerremoto/m1.gif" alt="m1"></a></marquee>
 </div>
-<!--- AUDIO  --------!>
-<div id="audio">
-<object type="application/x-shockwave-flash" data="http://hoyjovenyvital.gregoriofonten.com/audio/player.swf"
-id="audioplayer6" height="12" width="145">
-<param name="movie" value="http://hoyjovenyvital.gregoriofonten.com/audio/player.swf">
-<param name="FlashVars" value="playerID=6&amp;soundFile=http://terremoto.gregoriofonten.com/4.mp3&autostart=no&loop=no">
-<param name="quality" value="high">
-<param name="menu" value="false">
-<param name="wmode" value="transparent">
-</object></div>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-8176650-7");
-pageTracker._trackPageview();
-} catch(err) {}</script>
 </body>
 </html>
