--- a/2.html
+++ b/2.html
@@ -56,7 +56,7 @@ COLOR:  transparent;
 <a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
 <img src="https://chupilcon.github.io/poematerremoto/t1.gif" alt="T1"></a>
 <a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
-<img src="hhttps://chupilcon.github.io/poematerremoto/r3.gif" alt="r3"></a>
+<img src="https://chupilcon.github.io/poematerremoto/r3.gif" alt="r3"></a>
 <a class="link" href="https://chupilcon.github.io/poematerremoto/3.html">
 <img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r2"></a>
 <img src="https://chupilcon.github.io/poematerremoto/r1.gif" alt="r1">
